--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/lemon_reg"
         android:hint="@string/enter_your_mobile_no_10_digits"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:maxLength="10"
         android:padding="12dp"
         android:textColor="@color/white"
