Fixed Input Type For Password

--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -45,7 +45,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/lemon_reg"
         android:hint="@string/new_password"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:maxLength="6"
         android:padding="12dp"
         android:textColor="@color/white"
@@ -60,7 +60,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/lemon_reg"
         android:hint="@string/confirm_your_password"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:maxLength="6"
         android:padding="12dp"
         android:textColor="@color/white"
