--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/lemon_reg"
         android:hint="@string/otp_4_characters"
-        android:inputType="number"
+        android:inputType="numberPassword"
         android:maxLength="10"
         android:padding="12dp"
         android:textColor="@color/white"
@@ -45,7 +45,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/lemon_reg"
         android:hint="@string/new_password"
-        android:inputType="number"
+        android:inputType="numberPassword"
         android:maxLength="6"
         android:padding="12dp"
         android:textColor="@color/white"
